--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 		  	<artifactId>postgresql</artifactId>
 		</dependency> 
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
