--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.fornat_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=santoos.ed
+spring.mail.password=
