Implementando autenticacao e token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=santoos.ed@gmail.com
 default.recipient=santoos.ed@gmail.com
+
+jwt.secret=cursosb
+jwt.expiration=60000	
