--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=santoos.ed@gmail.com
 default.recipient=santoos.ed@gmail.com
 
 jwt.secret=cursosb
-jwt.expiration=300000	
+jwt.expiration=300000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=cursosb
+s3.region=us-east-1
